@@ -9,6 +9,7 @@ Work In Progress:
 . (kfsone) command names can now be partial, e.g. "loc" for "local",
            "ra", "rar" or "rare" for "rares"
 . (kfsone) Show stationLS and pad size in rares display
+. (kfsone) Added "--stations" option to "nav" command to show station details,
 
 v6.4.0 Jan 01 2015
 . (kfsone) Added "rare" sub-command,
